# python_pipeline_lab

./: .gitignore  Alisa_check.md  README.md  pyproject.toml
.github/workflows/: deploy.yml
scripts/: dev-run.sh  healthcheck.sh
src/training_app/: async_sqs_reader.py  config.py  cpu_load.py  logging_setup.py  main.py  sqs_reader.py  validator_client.py
src/training_app/validator_clients/: __init__.py  httpx_client.py  requests_client.py
systemd/: training-app.env.example  training-app.service
